# bws_test

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
bet-maker/: Dockerfile  event_pb2.pyi  pyproject.toml  wsgi.py
bet-maker/src/: .env  main.py
bet-maker/src/bet/: database.py  enums.py  get.py  models.py  post.py  router.py  service.py
bet-maker/src/core/: config.py  database.py  logging.py  rabbit.py
bet-maker/src/events/: get.py  models.py  router.py
bet-maker/src/grpc_event/: __init__.py  grpc_client.py
bet-maker/src/protos/: event.proto
bet-maker/src/utils/: base.py  cruds.py
line-provider/: Dockerfile  event_pb2.py  event_pb2_grpc.py  pyproject.toml  wsgi.py
line-provider/src/: .env  main.py  ttt.py  wsgi.py
line-provider/src/core/: config.py  logging.py  rabbit.py  singleton.py  storage.py
line-provider/src/event/: delete.py  get.py  models.py  post.py  router.py  update.py
line-provider/src/grpc_event/: __init__.py  grpc_server.py
line-provider/src/protos/: event.proto
logs/: bet-maker.log.2024-12-12  line-provider.log.2024-12-12  line-provider_error.log.2024-12-12
